# agent-pump

./: .agent-pump.yml  .gitignore  BACKEND_SETUP.md  BEST_PRACTICES.md  CHANGELOG.md  CONFIG.md  ENGINEERING_PLAN.md  FEATURES.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASK_NAME  TASK_NAME.md  all_tests_output.txt  build_ui.py  debug_output.txt  debug_ruff.py  debug_test.py  package-lock.json  pyproject.toml  ralph-new.ps1  ralph-release.ps1  run_verification.py  test_output.txt  test_verification.py  verify.bat  verify_detailed.py  verify_main.py
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
docs/: api.md  backend_setup.md  config.md  features.md  verification_commands.md
scripts/: debug_ruff.py  run_verification.py  verify.bat  verify_detailed.py
scripts/adhoc_tests/: comprehensive_test.py  direct_test.py  simple_test.py  test_verification.py
src/agent_pump/: __init__.py  __main__.py  cli.py  config.py  keybindings.py
tests/: conftest.py
tests/backends/: test_ollama.py  test_pi.py
tests/benchmark/: benchmark_prompt_loader.py
tests/communication/: test_mcp_client.py  test_mcp_security_exploit.py  test_mcp_security_flag_bypass.py  test_mcp_security_traversal.py  test_mcp_server_custom_tool.py  test_mcp_server_env_security.py  test_mcp_server_implicit_tools.py  test_mcp_server_integration.py  test_mcp_server_secure_execution.py
tests/integration/: test_auto_merge.py  test_autoload.py  test_execution_queue_integration.py  (+7 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+378 files in other folders)
