[project]
name = "agent-pump"
version = "0.1.0"
description = "Automated AI coding agent orchestrator - runs gemini-cli in a loop to implement features from ROADMAP.md"
readme = "README.md"
authors = [
    { name = "David Burhans", email = "david.burhans@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "transitions>=0.9.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "plyer>=2.1.0",
    "jinja2>=3.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff",
    "pyright",
]
diagrams = [
    "pygraphviz>=1.11",  # For state machine visualization
]

[project.scripts]
agent-pump = "agent_pump:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_pump"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "httpx>=0.28.1",
]
